crates/nexus-macros/tests/macro_compile_fail/aggregate_missing_state.rs
/// aggregate macro must require `state`.

#[nexus::aggregate(error = std::io::Error, id = u64)]
struct MissingState;

fn main() {}
